--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ em, i {
 }
 
 strong, b {
-  box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #fecc00;
+  box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #96cea9;
 }
 
 img {
