--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/research">Research</a>
+            <a href="{{ site.baseurl }}/blog">Blog</a>
           </nav>
         </header>
       </div>
