--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/research">Research</a>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
           </nav>
         </header>
       </div>
