--- a/style.scss
+++ b/style.scss
@@ -97,14 +97,19 @@ ol ul, ul ol, ul ul, ol ol {
 ul ul, ol ul {
   list-style-type: circle;
   font-size: 15px;
+  line-height: 1.6;
 }
 
-em, i {
+i {
   font-style: italic;
 }
 
 strong, b {
   box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #96cea9;
+}
+
+em {
+  box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #ccf7d9;
 }
 
 img {
