--- a/style.scss
+++ b/style.scss
@@ -100,15 +100,11 @@ ul ul, ol ul {
   line-height: 1.6;
 }
 
-i {
-  font-style: italic;
-}
-
 strong, b {
   box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #96cea9;
 }
 
-em {
+em,i {
   box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #ccf7d9;
 }
 
