--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ strong, b {
   box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #96cea9;
 }
 
-em,i {
+em {
   box-shadow: inset 0 0px 0 white, inset 0 -10px 0 #ccf7d9;
 }
 
