--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          <!--{% include svg-icons.html %}-->
+          <p>There's always room for improvement in this resume. I'm always thinking about how to better represent my work.</p>
         </footer>
       </div>
     </div>
