--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/research">Research</a>
-            <a href="{{ site.baseurl }}/notes">Notes</a>
+            <!-- <a href="{{ site.baseurl }}/notes">Notes</a> -->
           </nav>
         </header>
       </div>
