--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       <div class="container">
         <footer class="footer">
           <!--{% include svg-icons.html %}-->
-          <p style="font-size: 12.5px">There's always room for improvement in this resume. I'm always thinking about how to better represent my work.</p>
+          <p style="font-size: 12.5px">This resume can be changed at any time. I always think about how to better represent my work.</p>
         </footer>
       </div>
     </div>
